# DDA3020-Machine-Learning

./: README.md  pyproject.toml
homework1/: Classification iris.xlsx  HW1_124400004_Q1.ipynb  HW1_124400004_Q2.ipynb  linear_regression_test.txt  linear_regression_train.txt  p2programming.ipynb  reference_bs.ipynb  workbk.ipynb
homework2/HW2_Q2/: HW2_12440004_Q1.ipynb  HW2_Q2.ipynb
homework2/HW2_Q2/data/: test_data.npy  train_validation_data.npy
homework3/: HW3_124400004_Q1.ipynb  HW3_124400004_Q2.ipynb
